fix : fixed some broken styles and refactor

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
   padding: 20px max(5%, 10px);
   justify-content: space-between;
   align-items: center;
-  
+
   position: fixed;
   top: 0;
   left: 0;
@@ -56,7 +56,7 @@ body {
   background-color: var(--color-primary);
   display: flex;
   flex-direction: column;
-  font-size: 2em;
+  font-size: xx-large;
   justify-content: center;
   align-items: center;
   position: relative;
@@ -65,16 +65,18 @@ body {
 }
 
 #welcome-section h1 {
-  letter-spacing: 0.01em;
+  /* letter-spacing: 0.01em; */
+  text-align: center;
 }
 #welcome-section .sub-title {
+  text-align: center;
   color: rgb(0, 115, 115);
 }
 
 .projects {
   display: grid;
   justify-content: center;
-  grid-template-columns: repeat(auto-fill,minmax(270px,31rem));
+  grid-template-columns: repeat(auto-fill, minmax(270px, 31em));
   gap: 3rem;
   padding-bottom: 8rem;
   background: rgb(129, 168, 226);
@@ -92,7 +94,9 @@ body {
 }
 
 .projects header hr {
-  border :2px solid  ;
+  border: 1px solid;
+  width: 80%;
+  margin: auto;
 }
 .project-card {
   display: grid;
@@ -100,8 +104,8 @@ body {
   background-color: rgb(22, 50, 80);
 }
 .project-card h3 {
-  height: 3.4rem;
-  font-size:1.6em;
+  height: 2.1em;
+  font-size: 1.6em;
   padding-top: 0.1em;
   color: var(--color-primary);
   text-align: center;
@@ -109,41 +113,42 @@ body {
 
 img {
   width: 100%;
-  height: 25vw;
+  height: 23rem;
   object-fit: cover;
 }
 
-footer{
+footer {
   padding: 2rem max(5%, 10px);
   padding-bottom: 6rem;
   font-size: x-large;
   height: fit-content;
 }
-footer .brand{
-  padding-bottom: .8em;
+footer .brand {
+  padding-bottom: 0.8em;
   display: block;
 }
 
 footer hr {
-  margin: .8em 0;
-  border: 1px solid ;
+  margin: 0.8em 0;
+  border: 0.5px solid;
 }
 footer,
 footer a {
-  background-color: var(--color-primary-dark) ;
+  background-color: var(--color-primary-dark);
   color: rgb(200, 200, 200);
 }
 
-footer a{
-  font-size: .8em;
-  padding-right : 1.5em;
+footer a {
+  font-size: 0.8em;
+  padding-right: 1.5em;
 }
 a {
   color: rgb(17, 10, 81);
   text-decoration: none;
 }
 
-.brand:hover , a:hover {
+.brand:hover,
+a:hover {
   transform: scale(1.01);
   transition-duration: 100ms;
 }
